# talos_pal_locomotion_slmc

./: .gitignore  CHANGELOG.rst  CMakeLists.txt  README.md  biped_wbc.xml  package.xml
config/: base_imu_parameters.yaml  biped_inverse_dynamics_monitor.yaml  biped_parameters.yaml  biped_parameters_lower_body_torso_head.yaml  biped_parameters_simulation.yaml  com_link_offsets.yaml  controller_parameters_common.yaml  kvh_imu_parameters.yaml  sensors.yaml  swing_leg_waypoints2.yaml  wbc_common_parameters.yaml
config/estimator/: estimator_simulator_feedback.yaml  imu_parameters.yaml  kinematic_estimator_params.yaml  legged_state_link_position_estimator.yaml  legged_state_link_position_orientation_estimator.yaml  legged_switching_state_link_position_estimator.yaml  simple_legged_state_estimator.yaml  simple_legged_switching_state_link_position_estimator.yaml
config/extras/: balancing.yaml  debris.yaml
config/rviz/: footstep_replanning_test.rviz  pal_kinematic_simulator.rviz  pal_physics_simulator.rviz
include/talos_pal_locomotion/: test_utils.h  walking_wbc_base.h  walking_wbc_fixed_upper_body.h  walking_wbc_lower_body_torso_head.h  wbc_weighted_dynamics_talos.h
launch/: robot_control_parameters.launch  robot_dcm_walking_controller.launch  robot_walking_controller.launch  rqt_talos_steering.launch  spawn_obstacle_model (copy).launch  spawn_obstacle_model.launch  talos_dcm_walking_controller.launch  talos_dcm_walking_controller_with_position_initialization.launch  talos_dynamics_torques_computation.launch  talos_walking_controller.launch
launch/simulator/: gazebo.launch  pal_physics_simulator.launch  pal_physics_simulator_with_actuators.launch
src/: execute_motion.cpp  safe_controller_initialization.cpp  walking_wbc_base.cpp  walking_wbc_fixed_upper_body.cpp  walking_wbc_lower_body_torso_head.cpp  wbc_weighted_dynamics_talos.cpp
test/: contact_monitor.cpp  contact_monitor.test  dcm_monitor.cpp  dcm_monitor.test  dynamic_balancing.cpp  dynamic_balancing.launch  dynamic_balancing.test  dynamic_balancing_launch.test  dynamic_moving_support.cpp  dynamic_moving_support.test  dynamic_stepping.cpp  dynamic_stepping.test  dynamic_walk.cpp  dynamic_walk.test  rosconsole.config  standing.cpp  standing.test  static_stepping.cpp  static_stepping.test  static_walk.cpp  static_walk.launch  static_walk.test  static_walk_launch.test  swing_interpolator.cpp  swing_interpolator.test  ~CMakeLists.txt
test/config/: balancing_base_motion.yaml  balancing_dynamic_support.yaml  balancing_one_leg.yaml  static_walk.yaml  swing_interpolator.yaml
test/data/: balancing_base_motion_full_v2.yaml  balancing_base_motion_lower_body_torso_head.yaml  balancing_one_leg_full_v2.yaml  balancing_one_leg_lower_body_torso_head.yaml  contact_monitor.yaml  dynamic_stepping.yaml  moving_support_set_points_full_v2.yaml  moving_support_set_points_lower_body_torso_head.yaml  stance.yaml  static_stepping.yaml  static_walk_forward_rotate_full_v2.yaml  static_walk_forward_rotate_lower_body_torso_head.yaml  swing_interpolator.yaml  walk_forward_full_v2.yaml  walk_forward_lower_body_torso_head.yaml
test/msg/: Makefile  balancing_moving_base_goal.msg  disturbance.msg
