<?xml version="1.0"?>
<package format="2">
  <name>talos_pal_locomotion</name>
  <version>0.2.15</version>
  <description>The talos_pal_locomotion package</description>

  <maintainer email="hilario.tome@pal-robotics.com">Hilario Tome</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>talos_description</depend>
  <depend>pal_locomotion</depend>
  <depend>pal_locomotion_actions</depend>
  <depend>pal_locomotion_msgs</depend>
  <depend>terrain_generation</depend>
  <depend>backward_ros</depend>
  <depend>reflexxes_adapter</depend>
  <depend>pal_locomotion_dcm_planner</depend>
  <depend>talos_wbc</depend>
  <depend>pal_physics_utils</depend>
  <depend>kinematic_state_estimator</depend>
  <depend>inertia_shaping_effort_control</depend>


  <test_depend>rostest</test_depend>
  <test_depend>eigen_checks</test_depend>
  <test_depend>pal_physics_simulator</test_depend>
  <test_depend>talos_pal_physics_simulator</test_depend>
  <test_depend>talos_gazebo</test_depend>
  <test_depend>xacro</test_depend>
  <test_depend>pal_test_utils</test_depend>
  <test_depend>pal_configuration_initializer</test_depend>
  <test_depend>pal_control_msgs</test_depend>
  <test_depend>controller_manager_msgs</test_depend>
  <test_depend>gazebo_msgs</test_depend>
  <test_depend>pal_gazebo_worlds</test_depend>

  <export>
    <pal_locomotion plugin="${prefix}/biped_wbc.xml" />
  </export>

</package>
